# bionic-vulkan-wrapper

./: .gitignore  granite_decode.txt  meson.build
.github/workflows/: ci.yml
cross/: aarch64-linux-android.txt  aarch64-linux-gnu.txt
include/android_stub/cutils/: log.h  trace.h
src/: .clang-format
src/freedreno/vulkan/: vulkan
src/vulkan/: vulkan
src/vulkan/wrapper/: artifacts.cpp  artifacts.h  bc6.comp  bc7.comp  bc_decode.comp  bcdec.c  bitextract.h  buffer_to_image.comp  compile_etc2_encoder.sh  compress.spv  compute_shader_mode.h  debug.h  etc2_encode.inc  etc2_encode.slang  fill_magenta.comp  graphics_env_hooks.cpp  graphics_env_hooks.h  make_mask.py  meson.build  noop.comp  pull_spirv_tools.sh  rgtc.h  s3tc.comp  spirv_edit.cpp  spirv_edit.h  vk_entrypoints.py  vk_printer.c.mako  vk_printer.h.mako  vk_texcompress_bc.c  vk_texcompress_bc.h  vk_unwrapper.c.mako  vk_unwrapper.h.mako  vk_unwrapper_gen.py  vk_wrapper_features_gen.py  vk_wrapper_trampolines_gen.py  wrapper  wrapper_checks.h  wrapper_debug.c  wrapper_debug.h  wrapper_device.c  (+10 more)
src/vulkan/wrapper/include/spirv-tools/spirv-tools/: optimizer.hpp
src/vulkan/wsi/: generate_wrappers.py  generate_wrappers.sh  wsi_common.c  wsi_common.h  wsi_common_ahardware_buffer.c  wsi_common_ahardware_buffer_wrappers.h  wsi_common_ahardware_buffer_wrappers.in  wsi_common_display.c  wsi_common_wrappers.h  wsi_common_wrappers.in  wsi_common_x11.c  wsi_common_x11.h  wsi_common_x11_wrappers.h  wsi_common_x11_wrappers.in
